[FEAT] 객실 목록 조회 시 예약 가능 여부 필터링 기능 추가